@@ -3,6 +3,13 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
+2007/03/14
+	* Adjusted @pvpoff, @gvgoff, @killer, @killable to make characters stop
+	  attacking when used.
+	* Dispell no longer removes food boosts.
+	* Players will stop attacking when they change their look.
+	* Applied Alydis's fix to the mvp item logs logging mvp items even if the
+	  player couldn't get the item.
 2007/03/13
 	* Corrected the new packet version entries for skilluseposinfo
 	* Corrected item reloading not unsetting the "delay consume" flag if the
