@@ -1,5 +1,8 @@
 Date	Added
 
+2007/03/14
+	* Changed the default of debuff_on_logout to 1 since food items shouldn't
+	  dispell on logout. [Skotlex]
 2007/03/08
 	* Adjustments for the new mapcache [DracoRPG]
 	- Removed ".gat" from map names in maps_athena.conf
